# niral_utilities

./: CMakeLists.txt
CorrespondenceEvaluator/: CMakeLists.txt  itkCorrespondenceEvaluator.txx  main.cpp
CurveCompare/: CMakeLists.txt
DWI_NiftiNrrdConversion/: CMakeLists.txt
ImageStat/: CMakeLists.txt
convertITKformats/: CMakeLists.txt
